Meta tag updated

--- a/vol1-1-article1.html
+++ b/vol1-1-article1.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="The factors determining knowledge sharing intention among information professionals in Nigeria" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol1-1-article1.html" />
+	<meta name="citation_author" content="Tella Adeyinka" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/7-34-1-PB.pdf" />
+	<meta name="citation_volume" content="1" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="1" />
+	<meta name="citation_lastpage" content="19" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,7 +72,7 @@
                         <p style="text-align: center;">
                             Tella Adeyinka
                             <br>
-                            Department of Library and Information Science,  
+                            Department of Library and Information Science,
                             <br>
                             University of Ilorin, Nigeria
                         </p>
@@ -83,15 +93,15 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Implications</em>
-                            -The research findings have a big bearing on policy formulation and decision making in information and knowledgeorganisations, the public and private information sector players, professional associations and information and knowledge training institutions. 
+                            -The research findings have a big bearing on policy formulation and decision making in information and knowledgeorganisations, the public and private information sector players, professional associations and information and knowledge training institutions.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
                             -This research has a great value in the sense that it is one of the pioneer studies on information sharing in the context of information research in Nigeria.
                         </p>
-                        
+
                         <div>
-                            <a href="assets/img/7-34-1-PB.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/7-34-1-PB.pdf" target="blank">The factors determining knowledge sharing intention among information professionals in Nigeria</a>
                         </div>
                     </article>
                 </div>
