--- a/vol1-1-article2.html
+++ b/vol1-1-article2.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Knowledge Management Jobs in Kenya: A Functional Analysis" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol1-1-article2.html" />
+	<meta name="citation_author" content="Tom Kwanya" />
+    <meta name="citation_author" content="Jared Ogutu" />
+    <meta name="citation_author" content="Eric Muthuri" />
+    <meta name="citation_author" content="Tajerua Turandi" />
+    <meta name="citation_author" content="Erick Maina" />
+    <meta name="citation_author" content="Christone Omach" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Knowledge%20Management%20Jobs%20in%20Kenya%20A%20Functional%20Analysis.pdf" />
+	<meta name="citation_volume" content="1" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="20" />
+	<meta name="citation_lastpage" content="38" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,7 +77,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Dr. Tom Kwanya, Jared Ogutu, Eric Muthuri, Tajerua Turandi, Erick Maina & Christone Omach
                             <br>
-                            Department of Information and Knowledge Management 
+                            Department of Information and Knowledge Management
                             <br>
                             The Technical University of Kenya
                         </p>
@@ -73,7 +88,7 @@
                             <em>Rationale of Study</em>
                             -Most organisations in Kenya face challenges integrating the knowledge management function in their structures due to the lack of a clear understanding of what knowledge managers should do. Consequently, there currently exist varied, unpredictable and often shallow job descriptions associated with knowledge managers.
                         </p>
-                        <p class="text-white-75 mb-4"> 
+                        <p class="text-white-75 mb-4">
                             <em>Methodology</em>
                             -The researchers conducted a functional analysis of knowledge management jobs in Kenya in an effort to establish the general job titles used to refer to knowledge management specialists, ascertain their position in the organisational structure, explore their job responsibilities and requirements, as well as understand any special requirements associated with knowledge management roles. Data was obtained through a content analysis of job advertisements carried in the Daily Nation and Standard, which are the leading newspapers in Kenya,. Additional data was also obtained from online job advertisement platforms.
                         </p>
@@ -90,9 +105,9 @@
                             <em>Originality</em>
                             -The researchers propose a model job description for knowledge management specialists which may be applied by organisations in Kenya and beyond.
                         </p>
-                    
+
                         <div>
-                            <a href="assets/img/Knowledge Management Jobs in Kenya A Functional Analysis.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Knowledge Management Jobs in Kenya A Functional Analysis.pdf" target="blank">Knowledge Management Jobs in Kenya: A Functional Analysis</a>
                         </div>
                     </article>
                 </div>
