--- a/vol1-1-article3.html
+++ b/vol1-1-article3.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Distance librarianship in Kenyan Universities" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol1-1-article3.html" />
+	<meta name="citation_author" content="Joan Wakasa Murumba" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Distance%20librarianship%20in%20Kenyan%20Universities.pdf" />
+	<meta name="citation_volume" content="1" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="39" />
+	<meta name="citation_lastpage" content="53" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,7 +72,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Joan Wakasa Murumba
                             <br>
-                            Department of Computer Science and Informatics, 
+                            Department of Computer Science and Informatics,
                             <br>
                             Karatina University
                         </p>
@@ -71,7 +81,7 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            -Many institutions of higher learning in Kenya are now delivering their programmes through distance learning and the library is providing support by offering information resources and services to students who are off campus. This research sought to establish the effectiveness of libraries in providing information resources and services to open and distance learners ODLs.. 
+                            -Many institutions of higher learning in Kenya are now delivering their programmes through distance learning and the library is providing support by offering information resources and services to students who are off campus. This research sought to establish the effectiveness of libraries in providing information resources and services to open and distance learners ODLs..
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
@@ -83,10 +93,10 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
-                            - Little has been documented on the effectiveness of content recruitment in institutional repositories in Kenyan universities. Therefore, this paper is a valuable addition to the existing literature on the subject.  
+                            - Little has been documented on the effectiveness of content recruitment in institutional repositories in Kenyan universities. Therefore, this paper is a valuable addition to the existing literature on the subject.
                         </p>
                         <div>
-                            <a href="assets/img/Distance librarianship in Kenyan Universities.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Distance librarianship in Kenyan Universities.pdf" target="blank">Distance librarianship in Kenyan Universities</a>
                         </div>
                     </article>
                 </div>
