--- a/vol2-1-article1.html
+++ b/vol2-1-article1.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Knowledge audit at National Archives of Zimbabwe: a step towards implementing knowledge management" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol2-1-article2.html" />
+	<meta name="citation_author" content="Peterson Dewah" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man2.1.1.Published.pdf" />
+	<meta name="citation_volume" content="2" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="1" />
+	<meta name="citation_lastpage" content="15" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -60,9 +70,9 @@
                             Knowledge audit at National Archives of Zimbabwe: a step towards implementing knowledge management
                         </h3>
                         <p style="text-align: center;">
-                            Peterson Dewah 
+                            Peterson Dewah
                             <br>
-                            Lecturer, National University of Science and Technology  
+                            Lecturer, National University of Science and Technology
                             <br>
                             peterson.dewah@nust.ac.zw / Dewah@ukzn.ac.za
                         </p>
@@ -96,7 +106,7 @@
                             Archives, explicit knowledge, knowledge audit, knowledge management, tacit knowledge, Zimbabwe
                         </p>
                         <div>
-                            <a href="assets/img/Man2.1.1.Published.pdf">Full-Text Document</a>
+                            <a href="assets/img/Man2.1.1.Published.pdf">Knowledge audit at National Archives of Zimbabwe: a step towards implementing knowledge management</a>
                         </div>
                     </article>
                 </div>
