--- a/vol2-1-article2.html
+++ b/vol2-1-article2.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Provision of digital reference services in academic libraries in Kenya: a review" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol2-1-article2.html" />
+	<meta name="citation_author" content="James M. Tutu" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%201.2.2.pdf" />
+	<meta name="citation_volume" content="2" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="12" />
+	<meta name="citation_lastpage" content="21" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -60,9 +70,9 @@
                             Provision of digital reference services in academic libraries in Kenya: a review
                         </h3>
                         <p style="text-align: center;">
-                            James M. Tutu 
+                            James M. Tutu
                             <br>
-                            Acting University Librarian 
+                            Acting University Librarian
                             <br>
                             Muranga University College, Kenya
                             <br>
@@ -98,7 +108,7 @@
                             Digital reference, virtual reference, reference services, information services, academic libraries, Kenya
                         </p>
                         <div>
-                            <a href="assets/img/Man 1.2.2.pdf">Full-Text Document</a>
+                            <a href="assets/img/Man 1.2.2.pdf">Provision of digital reference services in academic libraries in Kenya: a review</a>
                         </div>
                     </article>
                 </div>
