--- a/vol2-2-article1.html
+++ b/vol2-2-article1.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="A review of the status of e-government implementation in Kenya" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol2-2-article1.html" />
+	<meta name="citation_author" content="Esther Nderitu Imbamba" />
+    <meta name="citation_author" content="Nancy Kimile" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%202.2.1.pdf" />
+	<meta name="citation_volume" content="2" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="14" />
+	<meta name="citation_lastpage" content="28" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,7 +73,7 @@
                         <p style="text-align: center;"class="text-white-75 mb-4">
                             Esther Nderitu Imbamba
                             <br>
-                            Department of Computing and Information Sciences  
+                            Department of Computing and Information Sciences
                             <br>
                             Maasai Mara University
                             <br>
@@ -71,7 +82,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Nancy Kimile
                             <br>
-                            Department of Computing and Information Sciences 
+                            Department of Computing and Information Sciences
                             <br>
                             Maasai Mara University
                         </p>
@@ -93,7 +104,7 @@
                             -In order to measure the status of e-government, two indexes were used: 1) E-government
                             Development Index (EGDI); and 2) Network Readiness Index (NRI). The study adopted a theoretical approach
                             by conducting a review of literature on e-government in Kenya. Fit-Viability theory was used to assess the
-                            capacity of the Government of Kenya to roll out viable e-services to its citizens. 
+                            capacity of the Government of Kenya to roll out viable e-services to its citizens.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
@@ -104,7 +115,7 @@
                             Kenya. These challenges may be surmounted through increased digital inclusivity, enhanced broadband
                             connectivity, strengthened staff ICT skills and openness to new technologies.
                         </p>
-                        <p class="text-white-75 mb-4"> 
+                        <p class="text-white-75 mb-4">
                             <em>Implications</em>
                             -The findings of this study may be used by the Government of Kenya to plan, roll out and monitor
                             e-government projects with a view to enhancing their success and impact..
@@ -123,7 +134,7 @@
         Index; Kenya
                         </p>
                         <div>
-                            <a href="assets/img/Man 2.2.2.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 2.2.2.pdf" target="blank">A review of the status of e-government implementation in Kenya</a>
                         </div>
                     </article>
                 </div>
