--- a/vol2-2-article2.html
+++ b/vol2-2-article2.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Indigenous Knowledge in Acholi Nicknames" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol2-2-article2.html" />
+	<meta name="citation_author" content="J.P. Odoch Pido" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%202.2.1.pdf" />
+	<meta name="citation_volume" content="2" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="1" />
+	<meta name="citation_lastpage" content="13" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,7 +72,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             J.P. Odoch Pido
                             <br>
-                            Department of Design and Creative Media  
+                            Department of Design and Creative Media
                             <br>
                             The Technical University of Kenya
                             <br>
@@ -114,7 +124,7 @@
                             Acholi, Uganda, East Africa, nicknames, indigenous knowledge
                         </p>
                         <div>
-                            <a href="assets/img/Man 2.2.1.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 2.2.1.pdf" target="blank">Indigenous Knowledge in Acholi Nicknames</a>
                         </div>
                     </article>
                 </div>
