--- a/vol3-1-arrticle3.html
+++ b/vol3-1-arrticle3.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="The status of the implementation of institutional repositories in selected newly established universities in Kenya" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol3-1-arrticle3.html" />
+	<meta name="citation_author" content="Pauline Ruguru Njagi" />
+    <meta name="citation_author" content="Ben Namande" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%203.1.3%20-%20Final.pdf" />
+	<meta name="citation_volume" content="3" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="30" />
+	<meta name="citation_lastpage" content="40" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,14 +73,14 @@
                         <p style="text-align: center;">
                             Pauline Ruguru Njagi
                             <br>
-                            Murang’a University of Technology 
+                            Murang’a University of Technology
                             <br>
                             rugurupauline@gmail.com
                         </p>
                         <p style="text-align: center;">
                             Dr. Ben Namande
                             <br>
-                            Kenyatta University 
+                            Kenyatta University
                             <br>
                             benwekalao@yahoo.com
                         </p>
@@ -78,23 +89,23 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            -Academic institutions worldwide have embraced institutional repositories as a means to showcase their research globally. In Kenya, the majority of academic institutions with effective repositories are established universities. Little is known of institutional repositories of newly established universities in Kenya. This study evaluated the status of the implementation of institutional repositories of universities established between 2016 and 2017 in Kenya. 
+                            -Academic institutions worldwide have embraced institutional repositories as a means to showcase their research globally. In Kenya, the majority of academic institutions with effective repositories are established universities. Little is known of institutional repositories of newly established universities in Kenya. This study evaluated the status of the implementation of institutional repositories of universities established between 2016 and 2017 in Kenya.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                            -The researchers used a descriptive research design in this study. Data was collected from professional library staff in three newly established universities using questionnaires. The actual respondents were selected through information-oriented purposive sampling. The sample size was twenty librarians from Kirinyaga University, Machakos University, and University of Embu. 
+                            -The researchers used a descriptive research design in this study. Data was collected from professional library staff in three newly established universities using questionnaires. The actual respondents were selected through information-oriented purposive sampling. The sample size was twenty librarians from Kirinyaga University, Machakos University, and University of Embu.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
-                            -All the university libraries investigated had functional institutional repositories. The libraries had developed submission and metadata policies. The staff charged with implementing institutional repositories had relevant skills, understood the scholarly communication cycle, and were responsible for recruitment of institutional repository content. The challenges faced in implementing institutional repositories included low levels of awareness of the existence of IR by the intended users, reluctant of the researchers in submitting their research with the IR, lack of resources, inadequate staff, and submission policy. 
+                            -All the university libraries investigated had functional institutional repositories. The libraries had developed submission and metadata policies. The staff charged with implementing institutional repositories had relevant skills, understood the scholarly communication cycle, and were responsible for recruitment of institutional repository content. The challenges faced in implementing institutional repositories included low levels of awareness of the existence of IR by the intended users, reluctant of the researchers in submitting their research with the IR, lack of resources, inadequate staff, and submission policy.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Implications</em>
-                            -The findings of this study buttresses the place of information repositories as a platform to share research literature and open access to scholarly materials globally even for newly established universities in developing countries. 
+                            -The findings of this study buttresses the place of information repositories as a platform to share research literature and open access to scholarly materials globally even for newly established universities in developing countries.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
-                            -Unlike the majority of research on institutional repositories in Kenya which focused on established universities, this study tells the story of newly established universities in Kenya. 
+                            -Unlike the majority of research on institutional repositories in Kenya which focused on established universities, this study tells the story of newly established universities in Kenya.
                         </p>
                         <p class="text-white-75 mb-4">
                             <strong>Keywords</strong>
@@ -103,7 +114,7 @@
                             Institutional repository, newly-established universities, academic libraries, Kenya
                         </p>
                         <div>
-                            <a href="assets/img/Man 3.1.3 - Final.pdf">Full-Text Document</a>
+                            <a href="assets/img/Man 3.1.3 - Final.pdf">The status of the implementation of institutional repositories in selected newly established universities in Kenya</a>
                         </div>
                     </article>
                 </div>
