--- a/vol3-1-article1.html
+++ b/vol3-1-article1.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Information needs of and services to small-scale vegetable farmers in Wareng, Uasin Gishu County, Kenya" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol3-1-article1.html" />
+	<meta name="citation_author" content="Zipporah Rop" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%203.1.1%20-%20Final1497.pdf" />
+	<meta name="citation_volume" content="3" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="1" />
+	<meta name="citation_lastpage" content="14" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,9 +72,9 @@
                         <p style="text-align: center;"class="text-white-75 mb-4">
                             Zipporah Rop
                             <br>
-                            Library Department 
+                            Library Department
                             <br>
-                            Moi University, Eldoret, Kenya 
+                            Moi University, Eldoret, Kenya
                             <br>
                             zippyrop@gmail.com
                         </p>
@@ -83,7 +93,7 @@
                             <em>Findings</em>
                             -The study found that vegetable farmers lack timely information specific to their information needs. The existing information systems and services were inadequate in satisfying the information needs. Furthermore, the study established that access to information was hampered by inadequate information resources and services.
                         </p>
-                        <p class="text-white-75 mb-4"> 
+                        <p class="text-white-75 mb-4">
                             <em>Implications</em>
                             -The findings of the study may be used to encourage the government to recognise the fact that information is an essential input for an effective agricultural system and as such contributes in a positive way to agricultural development. The findings, therefore, can be used to propose improvements to the existing information services, systems and channels in disseminating information to vegetable farmers.
                         </p>
@@ -98,7 +108,7 @@
                             Small-scale vegetable farmers, agricultural information, Wareng Sub-County, Uasin Gishu County, Kenya
                         </p>
                         <div>
-                            <a href="assets/img/Man 3.1.1 - Final1497.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 3.1.1 - Final1497.pdf" target="blank">Information needs of and services to small-scale vegetable farmers in Wareng, Uasin Gishu County, Kenya</a>
                         </div>
                     </article>
                 </div>
