--- a/vol3-1-article2.html
+++ b/vol3-1-article2.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Achieving information safety in a disaster environment: the way forward for Africa" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol3-1-article2.html" />
+	<meta name="citation_author" content="Janes Ouma Odongo" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%203.1.2%20-%20Final1496.pdf" />
+	<meta name="citation_volume" content="3" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="15" />
+	<meta name="citation_lastpage" content="29" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,7 +72,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Janes Ouma Odongo
                             <br>
-                            Department of Governance and Public Policy  
+                            Department of Governance and Public Policy
                             <br>
                             The Technical University of Kenya
                             <br>
@@ -83,11 +93,11 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
-                            -The findings of the study indicate that although records management in Africa is still largely paper based, electronic records management is picking pace across the continent in line with current global practice. However, the limited use of digital document signing technologies means that official signed records still have to be kept in hard-copies. This poses threats to records during emergencies. 
+                            -The findings of the study indicate that although records management in Africa is still largely paper based, electronic records management is picking pace across the continent in line with current global practice. However, the limited use of digital document signing technologies means that official signed records still have to be kept in hard-copies. This poses threats to records during emergencies.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Implications</em>
-                            -The author recommends that a more holistic approach should be taken in discourses regarding Africa’s disasters and their management. Most importantly, there should be meaningful disaster management focused on ensuring information security before, during and after disasters. This is considering that even disaster recovery efforts are largely hinged on the safety of these records. 
+                            -The author recommends that a more holistic approach should be taken in discourses regarding Africa’s disasters and their management. Most importantly, there should be meaningful disaster management focused on ensuring information security before, during and after disasters. This is considering that even disaster recovery efforts are largely hinged on the safety of these records.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
@@ -100,7 +110,7 @@
                             Information security, disaster management, development, Africa
                         </p>
                         <div>
-                            <a href="assets/img/Man 3.1.2 - Final1496.pdf" target="blank">Full-Text Document</a>
+                            <a href="assets/img/Man 3.1.2 - Final1496.pdf" target="blank">Achieving information safety in a disaster environment: the way forward for Africa</a>
                         </div>
                     </article>
                 </div>
