--- a/vol1-2-article1.html
+++ b/vol1-2-article1.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Resource Description and Access (RDA): enhancing information discovery through effective description" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol1-2-article1.html" />
+	<meta name="citation_author" content="Catherine Thuku" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%201.2.1.pdf" />
+	<meta name="citation_volume" content="1" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="1" />
+	<meta name="citation_lastpage" content="11" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -60,9 +70,9 @@
                             Resource Description and Access (RDA): enhancing information discovery through effective description
                         </h3>
                         <p style="text-align: center;" class="text-white-75 mb-4">
-                            Catherine Thuku 
+                            Catherine Thuku
                             <br>
-                            Library of Congress, Nairobi  
+                            Library of Congress, Nairobi
                             <br>
                             cthu@loc.gov
                         </p>
@@ -71,23 +81,23 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            -Resource Description and Access (RDA) is the new cataloguing content standard providing instructions and guidelines for creating effective bibliographic data for information resources in all formats of content and media. It replaces the Anglo-American Cataloguing Rules, 2nd edition (AACR-2). This paper seeks to draw the attention of librarians to RDA as a means of promoting its application. 
+                            -Resource Description and Access (RDA) is the new cataloguing content standard providing instructions and guidelines for creating effective bibliographic data for information resources in all formats of content and media. It replaces the Anglo-American Cataloguing Rules, 2nd edition (AACR-2). This paper seeks to draw the attention of librarians to RDA as a means of promoting its application.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                            -This study was conducted as a literature review analysing the origins and rationale of RDA, its structure, benefits, relationship with AACR-2, and how to implement it in libraries in developing countries such as Kenya. 
+                            -This study was conducted as a literature review analysing the origins and rationale of RDA, its structure, benefits, relationship with AACR-2, and how to implement it in libraries in developing countries such as Kenya.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
-                            -RDA is founded on established cataloguing principles, standards and models. It is schema-neutral and can work with the existing cataloguing formats such as Machine-Readable Cataloguing (MARC), formats for interchange of data over the Internet such as Extensible Markup Language (XML) and other structures that may be developed in the future. It is user-focused utilising terminology that is widely used and describes resources in a way that promotes specific user tasks - find, identify, select and obtain information resources as a way of enhancing their use. 
+                            -RDA is founded on established cataloguing principles, standards and models. It is schema-neutral and can work with the existing cataloguing formats such as Machine-Readable Cataloguing (MARC), formats for interchange of data over the Internet such as Extensible Markup Language (XML) and other structures that may be developed in the future. It is user-focused utilising terminology that is widely used and describes resources in a way that promotes specific user tasks - find, identify, select and obtain information resources as a way of enhancing their use.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Implications</em>
-                            -This paper can be used by librarians to understand the benefits of RDA as a cataloguing platform and adopt the same to enhance the findability of information resources through effective description and access.  
+                            -This paper can be used by librarians to understand the benefits of RDA as a cataloguing platform and adopt the same to enhance the findability of information resources through effective description and access.
                         </p>
-                        <p class="text-white-75 mb-4"> 
+                        <p class="text-white-75 mb-4">
                             <em>Originality</em>
-                            -Although this paper relies on existing scientific literature, it provides new perspectives for the Kenyan context. To that extent, it is original. 
+                            -Although this paper relies on existing scientific literature, it provides new perspectives for the Kenyan context. To that extent, it is original.
                         </p>
                         <p class="text-white-75 mb-4">
                             <strong>Keywords</strong>
@@ -96,7 +106,7 @@
                             Resource Description and Access, descriptive cataloguing, metadata, Functional Requirement of Bibliographic Records, cataloguing
                         </p>
                         <div>
-                            <a href="assets/img/Man 1.2.1.pdf">Full-Text Document</a>
+                            <a href="assets/img/Man 1.2.1.pdf" target="blank">Resource Description and Access (RDA): enhancing information discovery through effective description</a>
                         </div>
                     </article>
                 </div>
