Added new articles

--- a/vol7-1-article2.html
+++ b/vol7-1-article2.html
@@ -12,7 +12,7 @@
     <meta name="citation_author" content="Henry Ogada Hongo" />
     <meta name="citation_publication_date" content="2022/07/27" />
     <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
-    <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/vol7-1-article2.pdf" />
+    <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man7.1.2.pdf" />
     <meta name="citation_volume" content="7" />
     <meta name="citation_issue" content="1" />
     <meta name="citation_firstpage" content="15" />
@@ -111,6 +111,15 @@
                             level of commitment since the teams are shaken by the loss of a team member;
                             low organisational integration resulting from broken team; loss of library users;
                             and increased work load amongst the remaining staff.
+
+                        </p>
+                        <p class="text-white-75 mb-4">
+                            <em>Implications</em>
+                            -The authors recommend that the University of Nairobi Library
+                            should carefully look into the factors making the staff to migrate to other
+                            organisations. The library should also institute the necessary measures to reduce
+                            the staff turnover and enhance staff retention in order to reduce the knowledge
+                            loss.
 
                         </p>
                         <p class="text-white-75 mb-4">
